--- a/index.html
+++ b/index.html
@@ -10,9 +10,9 @@
 		<h1>Shadow Effect</h1>
 	</div>
 	<ul class="box">
-		<li><img src="images/nut.jpg" alt="nut"></li>
-		<li><img src="images/apple.jpg" alt="apple"></li>
-		<li><img src="images/strawberry.jpg" alt="strawberry"></li>
+		<li><img src="http://7q5cdt.com1.z0.glb.clouddn.com/shadow-demo-css3-nut.jpg" alt="nut"></li>
+		<li><img src="http://7q5cdt.com1.z0.glb.clouddn.com/shadow-demo-css3-apple.jpg" alt="apple"></li>
+		<li><img src="http://7q5cdt.com1.z0.glb.clouddn.com/shadow-demo-css3-strawberry.jpg" alt="strawberry"></li>
 	</ul>
 </body>
 </html>
